更改图片路径

--- a/_posts/2018-06-15-VUE-1.md
+++ b/_posts/2018-06-15-VUE-1.md
@@ -11,7 +11,7 @@ npm install vuex
 ```
 然后在src文件夹下创建store
 
-![avatar](/img/store.jpg)
+![avatar](store.jpg)
 ### store的组成
 ```
 const mystore = new VueX.Store({
