--- a/_posts/2018-07-01-RWD-1.md
+++ b/_posts/2018-07-01-RWD-1.md
@@ -14,7 +14,7 @@ Tags: 布局
 
 ### 盒子模型
 
-![avatar](/img/flex-01.jpg)
+![avatar](flex-01.jpg)
 
 上面就是一个`盒子模型`，下面是它的实现代码
 
@@ -50,7 +50,7 @@ box-sizing: border-box;
 
 就变成了这样
 
-![avatar](/img/flex-02.jpg)
+![avatar](flex-02.jpg)
 
 它的一环`content`自适应变成了`150`
 
