--- a/_posts/2019-01-10-GRID.md
+++ b/_posts/2019-01-10-GRID.md
@@ -271,7 +271,7 @@ i {
 ```
 第一个属性定义了5个值，那么就有5列，第二个属性定义了3个值，就有3行,看图
 
-![avatar](/img/grid1.svg)
+![avatar](grid1.svg)
 
 此外，还有一个新的单位`fr`
 
@@ -392,11 +392,11 @@ grid-auto-rows: 150px 150px 150px;
 
 `grid-auto-flow：row`
 
-![avatar](/img/grid2.svg)
+![avatar](grid2.svg)
 
 `grid-auto-flow：column`
 
-![avatar](/img/grid3.svg)
+![avatar](grid3.svg)
 
 #### 网格项属性
 
@@ -415,7 +415,7 @@ grid-auto-rows: 150px 150px 150px;
 
 同时网格还可以重叠，用`z-index`控制顺序就可以了
 
-![avatar](/img/grid4.svg)
+![avatar](grid4.svg)
 
 ##### grid-area
 
