--- a/_posts/2018-06-15-VUE-1.md
+++ b/_posts/2018-06-15-VUE-1.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: VUE之VueX
-Tags: Vue
+tags: Vue
 ---
 ### 什么是VueX
 `VueX`是专门服务于`Vue.js`的`状态管理模式`，大白话就是Vue项目中有一些全局变量，这些变量每个地方都可以用也可以修改，`VueX`负责把这些变量以及修改变量的方法包装起来，这样会更规则。
