--- a/_posts/2018-08-15-NOTE.md
+++ b/_posts/2018-08-15-NOTE.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: 桌面快捷方式杀手
-Tags: 系统
+tags: 系统
 ---
 
 本人有一个癖好，就是喜欢桌面干干净净的，但是平常要用的软件太多，不放在桌面又不好找，所以就想到用脚本来实现它，下面是具体的代码，复制代码到一个新的文本文件，修改一下适合你的电脑，然后后缀改成`.bat`，把这个脚本随便放在某个地方，比如保存在"D:\Shortcuts"文件夹，然后新建一个文本，输入以下代码
