--- a/_posts/2018-10-08-storage.md
+++ b/_posts/2018-10-08-storage.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: localStorage,sessionStorage,Cookie,Session
-Tags: HTML
+tags: HTML
 ---
 
 ### localStorage 和 sessionStorage
