--- a/_posts/2018-11-11-http.md
+++ b/_posts/2018-11-11-http.md
@@ -1,7 +1,7 @@
 ---
 layout: mypost
 title: HTTP请求方式
-Tags: HTTP
+tags: HTTP
 ---
 ### GET
 `GET`请求会显示请求指定的资源。一般来说GET方法应该只用于数据的读取，而不应当用于会产生副作用的非幂等的操作中。
