提交新博客 并进行SEO优化

--- a/_posts/1991-02-27-navicat.md
+++ b/_posts/1991-02-27-navicat.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: Navicat Premium for Mac完全免费激活方法之完美破解
+description: Navicat Premium for Mac完全免费激活方法之完美破解
+keywords: Navicat Premium
 type: software
 imgurl: navicat.png
 tags: software
