--- a/_posts/1991-02-27-pycharm.md
+++ b/_posts/1991-02-27-pycharm.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: PyCharm专业版永久免费激活
+description: PyCharm专业版永久免费激活
+keywords: PyCharm免费激活
 type: software
 imgurl: pycharm.jpeg
 tags: software
