--- a/_posts/1991-02-27-updatePY.md
+++ b/_posts/1991-02-27-updatePY.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: 将Mac的python版本从2.7升级到 3.7
+description: 将Mac的python版本从2.7升级到 3.7
+keywords: 升级python版本
 type: software
 imgurl: python.jpeg
 tags: software
