--- a/_posts/2018-06-01-ES-3.md
+++ b/_posts/2018-06-01-ES-3.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: ES6之Promise和async
+description: ES6异步函数
+keywords: Promise,Promise.all,Proomise.race,JS异步函数
 tags: ES6
 ---
 
