--- a/_posts/2018-06-15-VUE-1.md
+++ b/_posts/2018-06-15-VUE-1.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: VUE之VueX
+description: VUE状态管理模式
+keywords: vue store,vue Mutation,vue Action,vue getter
 tags: Vue
 ---
 ### 什么是VueX
