--- a/_posts/2018-06-20-VUE-2.md
+++ b/_posts/2018-06-20-VUE-2.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: VUE之VueRouter
+description: VUE路由
+keywords: VueRouter,VUE路由,VUE动态路由匹配,VUE嵌套路由,VUE重定向,VUR守卫
 tags: Vue
 ---
 ## 前言
