--- a/_posts/2018-09-17-show.md
+++ b/_posts/2018-09-17-show.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: display:none;visibility:hidden;opacity=0;的区别
+description: 前端开发中三种隐藏元素的方式以及它们之间的区别
+keywords: display,visibility,opacity
 tags: CSS
 ---
 
