--- a/_posts/2018-09-30-webSafe.md
+++ b/_posts/2018-09-30-webSafe.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: 网站常见攻击方式
+description: 网站常见攻击方式以及防护措施
+keywords: SQL注入,DDos,CSRF
 tags: 安全
 ---
 万事安全最重要，前端开发也不例外，作为一个前端程序猿，安全知识还是需要了解了解的。
