--- a/_posts/2018-10-08-storage.md
+++ b/_posts/2018-10-08-storage.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: localStorage,sessionStorage,Cookie,Session
+description: 网站数据储存
+keywords: localStorage,sessionStorage,Cookie,Session
 tags: HTML
 ---
 
