--- a/_posts/2018-11-11-http.md
+++ b/_posts/2018-11-11-http.md
@@ -1,6 +1,8 @@
 ---
 layout: mypost
 title: HTTP请求方式
+description: HTTP请求方式
+keywords: HTTP GET,HTTP POST,HTTP HEAD,HTTP PUT,HTTP DELETE
 tags: HTTP
 ---
 ### GET
