--- a/_posts/1991-02-27-ubuntu.md
+++ b/_posts/1991-02-27-ubuntu.md
@@ -80,4 +80,146 @@ python myproject.py
 ```
 http://服务器的IP地址:5000
 ```
-完成后，按几次`Ctrl+C`停止Flask开发服务器
+完成后，按几次`Ctrl+C`停止Flask开发服务器           
+### 测试uWSGI服务                      
+接下来，我们创建一个`WSGI`入口点，这个文件将告诉`uWSGI`服务器如何与我们的Flask应用程序进行交互。
+```
+nano ~/myproject/wsgi.py
+```
+写入以下内容：
+```
+from myproject import app
+
+if __name__ == "__main__":
+    app.run()
+```
+保存并关闭文件。              
+现在有了入口文件，那我们试着用`uWSGI`启动一下，首先要指定`socket`和`http`协议,以便应用程序启动后可以在其他地方通过服务器的IP地址访问,最后指定入口文件以及模块
+```
+uwsgi --socket 0.0.0.0:5000 --protocol=http -w wsgi:app
+```
+然后在本地浏览器访问
+```
+http://服务器的IP地址:5000
+```
+按几次`Ctrl+C`终止服务             
+下面我们就要退出虚拟环境了
+```
+deactivate
+```
+
+### 创建一个uWSGI配置文件
+
+我们已经测试了`uSWGI`可以启动应用程序，但我们希望长期使用的东西更稳定一些。首先，我们创建一个`uWSGI`的配置文件
+```
+nano ~/myproject/myproject.ini
+```
+文件内容如下
+```
+[uwsgi]
+; 声明这个配置文件是针对uwsgi
+
+module = wsgi:app
+; 指定入口
+
+master = true
+; 以主模式启动
+
+processes = 5
+; 生成5个工作进程
+
+socket = myproject.sock
+chmod-socket = 660
+vacuum = true
+; 我们上面用的socket是http的，而这里配置的是Unix的socket，因为这些组件在一台电脑上运行，所以Unix socket更快更安全。之后还会在我们的工程下面生成一个`myporject.sock`文件
+
+die-on-term = true
+; 确保原始系统跟uSWGI保持一致
+```
+完成后，保存并关闭文件              
+
+
+### 创建系统服务
+
+下面我们要创建一个系统服务，用系统服务启动`uWSGI`给Flask应用程序提供服务
+```
+sudo nano /etc/systemd/system/myproject.service
+```
+文件内容如下
+```
+[Unit]
+Description=uWSGI instance to serve myproject
+After=network.target
+
+[Service]
+User=你的用户名
+Group=www-data
+WorkingDirectory=/home/你的用户名/myproject
+Environment="PATH=/你的用户名/ubuntu/myproject/myprojectenv/bin"
+ExecStart=/home/你的用户名/myproject/myprojectenv/bin/uwsgi --ini myproject.ini
+
+[Install]
+WantedBy=multi-user.target
+```
+> 注意：一定要正确填写的当前用户的用户名，输入命令`pwd`就可以查看当前的绝对路径，`/home/`后面的就是你的用户名
+
+
+完成后，保存并关闭文件                
+
+下面我们就启动这个服务
+```
+sudo systemctl start myproject
+sudo systemctl enable myproject
+```
+
+### 配置Nginx
+我们的uWSGI应用程序服务器应该已启动并正在运行，下面我们就需要nginx接受web请求，并传给socket                       
+首先在Nginx的`sites-available`目录中创建一个新的服务器块配置文件
+```
+sudo nano /etc/nginx/sites-available/myproject
+```
+配置内容如下
+```
+server {
+    listen 80;
+    server_name server_domain_or_IP;
+
+    location / {
+        include uwsgi_params;
+        uwsgi_pass unix:/home/你的用户名/myproject/myproject.sock;
+    }
+}
+```
+> server_name 后面填你服务器的IP地址或者已经解析了的域名地址
+
+完成后，保存并关闭文件           
+要启用我们刚才的配置，就得把配置文件链接到`sites-enabled`目录
+```
+sudo ln -s /etc/nginx/sites-available/myproject /etc/nginx/sites-enabled
+```
+我们首先测试一下 配置文件有没有语法错误
+```
+sudo nginx -t
+```
+如果没有任何指示，重新启动nginx
+```
+sudo systemctl restart nginx
+```
+我们现在的端口是`80`端口，不需要5000了，同时我们允许防火墙访问nginx服务器
+```
+sudo ufw delete allow 5000
+sudo ufw allow 'Nginx Full'
+```
+完成后，重新启动一下我们的`myproject`服务
+```
+sudo systemctl restart myproject
+```
+现在，你在浏览器中访问你服务器的域名或者IP地址
+```
+http://server_domain_or_IP
+```
+
+大功告成....
+## 结束
+首先把你本地的Flask项目生成`requirement.txt`，然后把项目搬进服务器的`~/myproject/`目录下（我的做法是先把项目上传到git,然后在服务器上pull下来），然后进入虚拟环境，根据`requirement.txt`加载项目所有依赖包，同时不要忘记把`wsgi.py`中的`from myproject import app`改成你项目的入口文件。          
+每次做完修改，都必须要`sudo systemctl restart myproject`
