--- a/_posts/2019-07-20-定时开关机.md
+++ b/_posts/2019-07-20-定时开关机.md
@@ -17,8 +17,10 @@ tags: windows
 5. 找到`Time（hh：mm：ss）Alarm`设置自动开机的时间；
 6. 设置完成后按下键盘上的`F10`按键，弹出红框后，按下键盘上的回车键即可完成自动开机设置
 
+> 特别注意，定时启动任务跟电脑的主板是关联的，如果电脑硬件不提供该功能就无法定时开机
+
 ## 定时关机
-1. 按下`win+X`调出扩展开始菜单选项，并点击计算机管理选项；
+1. 按下`win+X`调出扩展开始菜单选项，并点击计算机管理选项，或者`控制面板->管理工具`
 2. 点击任务计划程序选项；
 3. 点击右侧的创建基本任务选项；
 4. 给任务命名一个名称如“每晚8点自动关机”，并点击下一步选项；
