--- a/_posts/2019-07-21-ubuntu定时任务.md
+++ b/_posts/2019-07-21-ubuntu定时任务.md
@@ -9,21 +9,22 @@ tags: ubuntu
 ## 前言
 `cron`是一个Linux定时执行工具，可以在无需人工干预的情况下运行作业。在Ubuntu中，cron是被默认安装并启动的。
 
-## 例子
+## 重启cron服务
+我们先不管cron服务有没有启动，我们先重启它
+```
+sudo service cron restart
+```
+
+## 新建任务
 **需求：定时每天8点，自动执行保存在/root目录下hello.sh脚本**
-1. 编辑`ect`下`crontab`文件
-```
-sudo nano /etc/crontab
-```
+1. 输入`crontab –e`，第一次打开的时候需要选择编辑工具，`vim`或`nano`都可以
 2. 最后一行添加
 ```
-00 08   * * *   root    /root/hello.sh
+00 08   * * *   sh /root/hello.sh
 ```
 3. 重启一下服务
 ```
-sudo service cron restart 
-或
-sudo systemctl restart cron
+sudo service cron restart
 ```
 
 ## 解释
