--- a/_posts/2019-09-15-柯里化与反柯里化.md
+++ b/_posts/2019-09-15-柯里化与反柯里化.md
@@ -3,7 +3,7 @@ layout: mypost
 title: js之柯里化与反柯里化
 description: javascript之柯里化与反柯里化
 keywords: 柯里化,反柯里化,curring,uncurring
-tags: js
+tags: JS
 ---
 
 
