--- a/_posts/2018-05-19-ES-2.md
+++ b/_posts/2018-05-19-ES-2.md
@@ -5,18 +5,18 @@ description: ES6之解构赋值
 keywords: ES6之解构赋值
 tags: ES6
 ---
-### 基本原则
+## 基本原则
 * 数组的元素是按次序排列的，变量的取值由它的位置决定；
 * 对象的属性没有次序，变量必须与属性同名，才能取到正确的值。
 
-### 基本语法
+## 基本语法
 ```
 let [x,y] = [1,2]  //数组的解构赋值
 // x=1 y=2
 let {foo,bar} = {foo:"aaa",bar:"bbb"} //对象的解构赋值
 //foo="aaa"  bar="bbb"
 ```
-### 用途
+## 用途
 
 1. 交换变量
 ```
