--- a/_posts/2018-06-15-VUE-1.md
+++ b/_posts/2018-06-15-VUE-1.md
@@ -5,7 +5,7 @@ description: VUE状态管理模式
 keywords: vue store,vue Mutation,vue Action,vue getter
 tags: Vue
 ---
-### 什么是VueX
+## 什么是VueX
 `VueX`是专门服务于`Vue.js`的`状态管理模式`，大白话就是Vue项目中有一些全局变量，这些变量每个地方都可以用也可以修改，`VueX`负责把这些变量以及修改变量的方法包装起来，这样会更规则。
 `VueX`应用的核心就是`store`仓库，项目中要使用`VueX`，先需要安装
 ```
@@ -14,7 +14,7 @@ npm install vuex
 然后在src文件夹下创建store
 
 ![avatar](store.jpg)
-### store的组成
+## store的组成
 ```
 const mystore = new VueX.Store({
   state: {
@@ -40,7 +40,7 @@ const mystore = new VueX.Store({
 })
 ```
 上面是一个简单的`store`,`state`对象里面的东西就是'全局变量',`mutations`对象里面则包含的是改变这些全局变量的方法,`getters`和`actions`下面再讲
-### store的使用
+## store的使用
 Vue项目中怎样才能使用到这个`store`呢,首先在`index.js`中导出`store`
 ```
 export default mystore
@@ -71,7 +71,7 @@ computed: mapState([
   'count'
 ])
 ```
-### Getter
+## Getter
 有时候需要把从`state`中派生一些状态，譬如`toFixed(2)`,所以出现了`getter`对象，
 通过`getter`获取状态用辅助方法`mapGetters`
 ```
@@ -84,13 +84,13 @@ computed: {
     ])
 }
 ```
-### Mutation
+## Mutation
 更改`store`中状态的唯一方法就是提交`mutation`,提交方法`store.commit('increment',payload)`,`payload`可以是对象也可以是单个的值
 > 注意：mutation必须是同步函数
 
 在组件中提交`mutation`
 
-##### 使用`this.$store.commit()`
+### 使用`this.$store.commit()`
 
 
 ```
@@ -109,7 +109,7 @@ methods: {
 <div @click="updateCount(payload)"></div>
 ```
 
-##### 通过`mapMutations`辅助函数
+### 通过`mapMutations`辅助函数
 
 ```
 import { mapMutations } from 'vuex'
@@ -135,22 +135,22 @@ methods: {
 <div @click="add(payload)"></div>
 ```
 
-### Action
+## Action
 因为`Mutation`必须是同步函数，如果要异步修改`store`的状态就需要`Action`。
 
-##### `Action`的特点
+### `Action`的特点
 * Action 提交的是 mutation，而不是直接变更状态
 * Action 可以包含任意异步操作。
 
 在组件中分发`Action`
-##### 使用`this.$store.pitch()`
+### 使用`this.$store.pitch()`
 
 ```
 this.$store.pitch('incrementAsync')
 ```
 
 
-##### 使用`mapActions`辅助函数
+### 使用`mapActions`辅助函数
 
 
 ```
@@ -166,7 +166,7 @@ methods: {
 ```
 
 
-### Module
+## Module
 
 当我们需要的状态比较多的时候，`store`对象就会变得非常臃肿，因此我们可以把store分割成模块。
 
