--- a/_posts/2018-06-20-VUE-2.md
+++ b/_posts/2018-06-20-VUE-2.md
@@ -9,14 +9,13 @@ tags: Vue
 
 `Vue Router`啥用呢，其实就是前端来更改页面路径的一个玩意，一般来说，网页的跳转都是要后台来控制的，现在有了它，前端自己就可以定义路由。当然，后台得提供一个默认渲染页面`index.html`，所以有了这玩意，做个单页面应用就很方便。
 
-## 正文
 
-### 实现原理
+## 实现原理
 `Vue`的思想就是`一切皆组件`，那么开发单页面应用的时候，它在加载页面的时候不会加载整个页面，而只加载指定的组件，那么当页面路径的改变的时候，并不是去更新页面，而是更新里面的组件。它的实现有两种模式：`Hash模式`和`History模式`，这个下面再讲。
 
-### 基本例子
+## 基本例子
 
-#### HTML
+### HTML
 
 ```
 <div id="app">
@@ -28,7 +27,7 @@ tags: Vue
 </div>
 ```
 
-#### JavaScript
+### JavaScript
 
 ```
 import Foo from "@/components/Foo"
@@ -42,7 +41,7 @@ export default new VueRouter({
   routes
 })
 ```
-#### 全局注册
+### 全局注册
 
 ```
 //main.js
@@ -55,7 +54,7 @@ new Vue({
 })
 ```
 
-### 动态路由匹配
+## 动态路由匹配
 
 | 模式 | 路径 | $route.params |
 | ----- | ----- | ----- |
@@ -64,7 +63,7 @@ new Vue({
 
 > 在组件中访问路由的参数方法：`this.$router.params`,此外还有`this.$router.query`(获取查询参数),`this.$router.hash`(获取hash值)
 
-### 嵌套路由
+## 嵌套路由
 
 `<router-view>`是最顶层的出口，当它匹配到的组件中还包含`<router-view>`那么就要用到嵌套路由，`children`就要出场了。
 
@@ -83,11 +82,11 @@ routes : [
 ]
 ```
 
-### 编程式的导航
+## 编程式的导航
 
 啥意思呢，上面的内容是讲怎么在html里面放一个a标签，下面要讲的是，怎么用js实现链接跳转。
 
-#### router.push()
+### router.push()
 
 ```
 this.$router.push({name: 'user',params: {userId: 123}})
@@ -97,15 +96,15 @@ const userId = 123
 this.$router.push({path: `user/${userId}` })
 ```
 
-#### router.replace()
+### router.replace()
 
 跟`router.push()`类似，区别就是，`router.replace()`不会向`History`添加新纪录，意思就是说不能通过`go(-1)`返回上一个路由
 
-#### router.go()
+### router.go()
 
 跟原生JS的`window.history.go()`一个意思
 
-### 命名视图
+## 命名视图
 
 `<router-view>`加载的是路由下默认的组件，当一个路由下有好多个组件的时候，就需要给`<router-view>`加一个`name`属性，让它对应相应的组件。
 
@@ -125,7 +124,7 @@ routes: [
   }
 ]
 ```
-### 重定向
+## 重定向
 
 ```
 routes: [
@@ -149,7 +148,7 @@ routes: [
   }
 ]
 ```
-### 别名
+## 别名
 
 如果要实现路径不变，但是访问的是另外一个路由的东西，那么就要用到别名`alias`
 
@@ -177,7 +176,7 @@ routes: [
 
 上面的代码中，当输入路径为`/foo`或者`home/foolis`或者`home/foo`渲染的都是相同的视图
 
-### 路由传参
+## 路由传参
 
 前面提到可以通过`parms={}`传递参数，在组件中获取参数
 
@@ -209,13 +208,13 @@ const router = new VueRouter({
 })
 ```
 
-### 导航守卫
+## 导航守卫
 
 啥是导航守卫呢，就好比假如每一个`url`路径代表一扇门，那么就有很多个门，有一个人穿过这些门，每两个门中间的路上有那么一个摄像头，那么摄像头就是`导航守卫`,它就能知道这个人从哪扇门过来的，准备去哪扇门。
 
 > 参数和查询改变并不需要去另外一扇门，所以摄像头就看不到，遇到这种情况就需要用到`beforeRouteUpdate`
 
-#### 全局守卫
+### 全局守卫
 
 ```
 const router = new VueRouter({})
@@ -228,7 +227,7 @@ router.beforeEach((to, from, next) => {
 
 > 与全局前置守卫对应的还有一个后置守卫`afterEach()`,但是后置守卫是没有`next`参数的
 
-#### 路由独享的守卫
+### 路由独享的守卫
 
 可以直接在路由配置上定义一个`beforeEnter`守卫
 
@@ -243,7 +242,7 @@ routes: [
 ]
 ```
 
-#### 组件内的守卫
+### 组件内的守卫
 
 ```
 export default{
@@ -279,7 +278,7 @@ beforeRouteUpdate(to, from, next) {
 
 > `beforeRouteEnter`是唯一一个可以回调的守卫
 
-#### 完整的导航流程
+### 完整的导航流程
 
 1. 全局的`beforeEach`守卫
 2. 重用组件中的`beforeRouteUpdate`守卫
@@ -290,7 +289,7 @@ beforeRouteUpdate(to, from, next) {
 7. 导航被确认
 8. 调用全局的`afterEach`
 
-### 路由元信息
+## 路由元信息
 
 ```
 {
@@ -319,7 +318,7 @@ router.beforeEach((to, from, next) => {
   }
 })
 ```
-### 滚动行为
+## 滚动行为
 
 使用前端路由，当切换到新路由后，页面默认保持的的是原来的滚动位置，如果想让它滚动到顶部就像重新加载的一样，就需要用到`scrollBehavior`
 
