--- a/_posts/2018-06-25-VUE-3.md
+++ b/_posts/2018-06-25-VUE-3.md
@@ -10,9 +10,7 @@ tags: Vue
 
 在`Vue`中，万物皆组件，学习组件乃是`Vue`的根基所在，假如一个页面相当于一张图，那么组件就是一个小小的拼图，通过组件可以拼出各式各样的图，这也是`Vue`的魅力所在。
 
-## 正文
-
-### 基本示例
+## 基本示例
 
 ```
 Vue.component('button-counter',{
@@ -33,7 +31,7 @@ Vue.component('button-counter',{
 </div>
 ```
 
-### 局部注册
+## 局部注册
 
 上面演示了如何全局注册一个组件，但是组件不能全部都全局注册，会造成代码的冗余，所以大部分的组件需要局部注册。
 
@@ -66,7 +64,7 @@ import buttonCounter from './component/buttonCounter'
 <buttonCounter></buttonCounter>
 ```
 
-### 基础组件的自动全局化注册
+## 基础组件的自动全局化注册
 
 有一些组件特别小，但是复用率特别高，必须输入框按钮之类的，这些组件就必须全局注册，但是组件又特别多，一个个注册显得代码特别臃肿，所以下面就用一段代码来实现自动注册。
 
@@ -105,7 +103,7 @@ requireComponent.keys().forEach(fileName => {
 
 那么`data`为何是个函数而不是对象呢，这是因为组件是可以复用的，每次使用就创建一个新的实例，把`data`里面的属性作为函数的返回值的话，它就实现了每个实例的属性的私有化，跟闭包一样原理。
 
-### 通过`prop`向组件传递数据
+## 通过`prop`向组件传递数据
 
 ```
 Vue.component('blog-post',{
@@ -146,7 +144,7 @@ data() {
 }
 ```
 
-### 组件向父级传值
+## 组件向父级传值
 
 这里要用到一个`Vue`的内置方法`$emit`,这个函数就相当于`js`中的`trigger()`，就是在组件中可以触发实例中绑定的事件，而且这个方法可以传递参数。
 
@@ -180,7 +178,7 @@ new Vue({
 
 在实例中可以使用`$event`获取`$emit`传递的参数，如果`$emit`触发的事件引用的是另外一个事件,那么`$emit`的参数将传给它引用的事件（`argsCouter`即$`emit`传递的参数）
 
-### 在组件中使用`v-model`
+## 在组件中使用`v-model`
 
 `<input v-model="searchText">`这是一个`v-model`的使用场景，那么它的本质其实是
 
@@ -205,7 +203,7 @@ Vue.component('custom-input',{
 })
 ```
 
-### 插槽
+## 插槽
 
 有时候我们在调用组件的时候，组件元素中间还有一些其他的东西，一般情况下，如果不处理这些东西会被舍弃的，但是如果加上`<slot>`元素，这些东西就会被渲染在组件之中
 
@@ -225,7 +223,7 @@ Vue.component('custom-input',{
 
 组件元素的闭合标签中间内容就是`插槽`，在插槽可以加`html`模板，甚至可以加组件
 
-#### 具名插槽
+### 具名插槽
 
 上面的只是一个插槽，那它默认渲染的就是组件中的`<slot>`，但是当有多个插槽，并且插槽还有指定位置的时候，就必须要给`<slot>`加上`name`属性
 
@@ -254,7 +252,7 @@ Vue.component('custom-input',{
 > 卡槽也可以有默认内容的，`<slot>默认内容</slot>`，当父级有传给子组件内容时，会覆盖默认内容
 
 
-### 动态组件
+## 动态组件
 
 前端开发中经常会出现选项卡之类的功能，实现它就需要不同的组件切来切去，这个功能可以通过`Vue`的`<component>`元素加一个特殊属性`is`来实现
 
@@ -272,7 +270,7 @@ Vue.component('custom-input',{
 </keep-alive>
 ```
 
-#### 异步组件
+### 异步组件
 
 有时候我们加载组件的时候并不希望它一开始就加载进来，而是调用它的时候再加载进来，例如在`VueRouter`里面，当我们跳转到路由后再去加载它对应的组件。
 
@@ -288,7 +286,7 @@ component(resolve){
 
 > 使用异步组件的时候，返回的都是一个`promise`函数
 
-### 结束语
+## 结束语
 
 组件相关的东西还有很多很多，比如官网的[处理边界情况](https://cn.vuejs.org/v2/guide/components-edge-cases.html),只不过应用场景不是很多，所以暂时不深入研究。
 就这样，收工。。。
