--- a/_posts/2018-07-01-RWD-1.md
+++ b/_posts/2018-07-01-RWD-1.md
@@ -9,12 +9,10 @@ tags: 布局
 ## 前言
 
 时代在进步，人对美也有了更高的追求，对于物品的追求不再是简简单单的实用就行，对美观也是有所要求。web网站也是如此，当我们用不同的设备访问一个网站时，我们是希望网站呈现出的东西跟我的设备刚刚匹配，页面的排版、字体的大小、模板的布局就专门针对这个设备开发的APP一样。但是终端设备种类如此之多，如果针对一个设备就开发一种页面，那么程序员就不单单是头秃了。所以，响应式页面布局就来了。
-
-## 正文
-
+           
 今天就从`CSS3`引入的`box-sizing`和`Flex布局`下手。
 
-### 盒子模型
+## 盒子模型
 
 ![avatar](flex-01.jpg)
 
@@ -34,7 +32,7 @@ div {
 
 为了解决上面的问题，`CSS3`引入了`box-sizing`属性
 
-#### box-sizing
+### box-sizing
 
 ```
 box-sizing: content-box|border-box|inherit;
@@ -56,11 +54,11 @@ box-sizing: border-box;
 
 它的一环`content`自适应变成了`150`
 
-### Flex布局
+## Flex布局
 
 基本的概念图就不搞了，看的人一头雾水，图盲一枚
 
-#### Flex容器
+### Flex容器
 
 ```
   <div class="container">
