--- a/_posts/2018-07-05-RWD-2.md
+++ b/_posts/2018-07-05-RWD-2.md
@@ -8,7 +8,7 @@ tags: 布局
 
 今天来响应式布局第二弹
 
-### Viewport
+## Viewport
 
 在`<head></head>`标签里面有一个`meta`属性来描述这个网页属性。那么针对移动端就出现了一个`viewport`的`meta`属性。
 
@@ -22,7 +22,7 @@ tags: 布局
 * maximum-scale/minimun-scale : 最大/最小缩放比例
 * user-scalable : 用户是否可以手动缩放
 
-### 网格视图
+## 网格视图
 
 其实`Boostrap`的布局就是网格视图，它的思想是把屏幕平分成12列，然后元素的宽度等于几列就占几列。
 首先，得把所有元素设置为盒模型
@@ -78,7 +78,7 @@ tags: 布局
 </div>
 ```
 
-### 媒体查询
+## 媒体查询
 
 当我们需要针对不同的设备定义不同的样式时，就必须用到媒体查询。基本语法`@media only screen and ()`,括号里面就是我们的限定语句。
 好比我们上面写的网格视图，当设备屏幕足够小的时候，12列的每一列宽度就会特别小，所以在针对小屏幕设备的时候，需要另外定义`css样式`
@@ -109,7 +109,7 @@ orientation: portrait | landscape(横屏);
 }
 ```
 
-### 图片
+## 图片
 
 对于移动端设备，图片我们要求首先不放大，其次当屏幕小的时候，图片的尺寸不大于屏幕宽度。
 
