--- a/_posts/2018-07-07-RWD-3.md
+++ b/_posts/2018-07-07-RWD-3.md
@@ -8,12 +8,12 @@ tags: 布局
 
 响应式布局第三弹
 
-### 基本概念介绍
+## 基本概念介绍
 
 `rem`和`em`意思差不多，这两货是根据字体大小来计算，假如字体是`12px`,那么`2em = 24px`，区别就是`rem`是根据跟标签`html`设置的大小计算，而`em`是根据父级的字体大小计算，但是父元素那么多，每个父元素的大小都不一样，所以果断舍弃它。
 `vw`简单，就是可视区的宽度，`100vw`就相当于`100%`可视区宽度。
 
-### rem
+## rem
 
 使用`rem`的思想就是在不同尺寸屏幕下，根标签`<html>`的字体大小不同。实现方法有两种
 
@@ -51,7 +51,7 @@ html {
 
 但是上面两个都有缺点，第一种方式必须头部内联JS，第二种在改变可视区大小的时候，只有到临界值字体才回变化，变化就是显得特别生硬。
 
-### rem + vw
+## rem + vw
 
 为了解决上面两个问题，我们可以用`vw`加上`clac`属性来实现
 
