--- a/_posts/2018-10-08-storage.md
+++ b/_posts/2018-10-08-storage.md
@@ -6,21 +6,21 @@ keywords: localStorage,sessionStorage,Cookie,Session
 tags: HTML
 ---
 
-### localStorage 和 sessionStorage
+## localStorage 和 sessionStorage
 
-#### 共同点
+### 共同点
 
 1. 大小都为5M左右
 2. 都有同源策略限制
 3. 仅在客户端存储，跟服务端没关系
 
-#### 不同点
+### 不同点
 
 1. 生命周期----`localStorage`:存储是永久性的，除非用户人为删除， `sessionStorage`:与存储数据的脚本所在的标签页的有效期是相同的。一旦窗口或者标签页关闭，`sessionStorage`存储的数据也就删除了。
 
 2. 作用域----`localStorage`在同一个浏览器下，`同源文档`可以共享，覆盖。`sessionStorage`的作用域被限制在了同一窗口之内，一个页面内的两个同源的`iframe`才可以共享`sessionStorage`
 
-#### API
+### API
 
 ```
 // sessionStorage 用法相同
@@ -31,7 +31,7 @@ localStorage.removeItem("name");  // 删除对应的数据
 localStorage.clear();  // 删除所有数据
 ```
 
-### Cookie
+## Cookie
 
 `Cookie`就是「小甜饼」，有以下特点：
 
@@ -41,7 +41,7 @@ localStorage.clear();  // 删除所有数据
 3. 每次请求都会携带在HTTP头信息里面
 4. 原生API不友好，需要封装以下
 
-#### API
+### API
 
 服务器向客户端发送`Cookie`
 
@@ -80,7 +80,7 @@ cookie的name前面可以加前缀,主要用于安全页面(即使用HTTPS协议
 1. `__Secure-`:必须与`Secure`一同设置
 2. `__Host-`:必须与`Secure`一同设置，不能设置`Domain`,`Path`的值必须设置为`/`
 
-#### 封装API
+### 封装API
 
 ```
 var Cookie = {
@@ -117,7 +117,7 @@ var Cookie = {
 }
 ```
 
-### Session
+## Session
 
 Session实在无状态的HTTP协议下，服务端用来记录用户状态时标识具体用户的机制。它可以储存在文件、数据库或者集群中。
 
@@ -125,7 +125,7 @@ Session实在无状态的HTTP协议下，服务端用来记录用户状态时标
 
 大多数的应用是用`Cookie`来存储`sessionid`,每次会话的时候，客户端把`sessionid`发给服务器
 
-### Cookie 和 Session
+## Cookie 和 Session
 
 1. `Session`是保存在服务端的一个数据结构，`Cookie`是客户端保存用户信息的一种机制，也是实现`Session`的一种方式。
 2. `Cookie`的安全性一般，他人可以通过分析存放在本地的`Cookie`来进行`Cookie欺骗`，所以重要信息要放在`Session`中
