--- a/_posts/2018-11-11-http.md
+++ b/_posts/2018-11-11-http.md
@@ -5,29 +5,29 @@ description: HTTP请求方式
 keywords: HTTP GET,HTTP POST,HTTP HEAD,HTTP PUT,HTTP DELETE
 tags: HTTP
 ---
-### GET
+## GET
 `GET`请求会显示请求指定的资源。一般来说GET方法应该只用于数据的读取，而不应当用于会产生副作用的非幂等的操作中。
 > 幂等的意思就是说多次执行产生的结果跟执行一次产生的结果一致
 
 `GET`会方法请求指定的页面信息，并返回响应主体，GET被认为是不安全的方法，因为GET方法会被网络蜘蛛等任意的访问。
 
-### HEAD
+## HEAD
 
 `HEAD`方法与`GET`方法一样，都是向服务器发出指定资源的请求。但是，服务器在响应`HEAD`请求时不会回传资源的内容部分，即：响应主体。这样，我们可以不传输全部内容的情况下，就可以获取服务器的响应头信息。`HEAD`方法常被用于客户端查看服务器的性能。
 
-### POST
+## POST
 
 `POST`请求会 向指定资源提交数据，请求服务器进行处理，如：表单数据提交、文件上传等，请求数据会被包含在请求体中。POST方法是非幂等的方法，因为这个请求可能会创建新的资源或/和修改现有资源。
 
-### PUT
+## PUT
 
 `PUT`请求会身向指定资源位置上传其最新内容，`PUT`方法是幂等的方法。通过该方法客户端可以将指定资源的最新数据传送给服务器取代指定的资源的内容。
 
-### DELETE
+## DELETE
 
 `DELETE`请求用于请求服务器删除所请求URI（统一资源标识符，Uniform Resource Identifier）所标识的资源。`DELETE`请求后指定资源会被删除，DELETE方法也是幂等的。
 
-### OPTIONS
+## OPTIONS
 
 `OPTIONS`请求与`HEAD`类似，一般也是用于客户端查看服务器的性能。 这个方法会请求服务器返回该资源所支持的所有HTTP请求方法，该方法会用'*'来代替资源名称，向服务器发送`OPTIONS`请求，可以测试服务器功能是否正常。`JavaScript`的`XMLHttpRequest`对象进行`CORS`跨域资源共享时，就是使用OPTIONS方法发送嗅探请求，以判断是否有对指定资源的访问权限。
 
