--- a/_posts/2019-01-10-GRID.md
+++ b/_posts/2019-01-10-GRID.md
@@ -9,9 +9,7 @@ tags: 布局
 
 之前学习了`flex`布局，`flex`布局可以说是无所不能，但是它也有缺点，首先它的兼容性不够低，IE8就高不定了，其次，它是一个一维布局，所以今天要学习更牛X的二维布局---`Grid`以及可以兼容低版本的`table`布局。
 
-## 正文
-
-### Table布局
+## Table布局
 
 之前因为HTML Table被人诟病，所以Table就坐了冷板凳，但是它却有它的独特之处
 
@@ -25,9 +23,9 @@ td, th == { display: table-cell; }
 
 就了解这三个就够了,后面的CSS的代码就可以把元素拥有双等号前面元素的特征
 
-#### 使用场景
+### 使用场景
 
-##### 动态垂直居中
+>动态垂直居中
 
 这个使用的关键是`vertical-align: center`,但是这个属性设置给普通元素大多数情况是不能实现所要的效果，但是`table`例外，它可以完美将其内部元素垂直居中
 
@@ -75,7 +73,7 @@ i {
 ```
 自然,`flex`和`grid`布局搞个小小的垂直居中就不在话下了
 
-##### 动态水平居中
+> 动态水平居中
 
 水平居中的话父元素设置个`text-aling: center`就可以了，但是这个属性会继承到所有子元素里，同时子元素必须是`inline/inline-block`，如果用`table`的话就特别简单
 
@@ -87,7 +85,7 @@ i {
 ```
 这就体现出`table`的优势，想用它的特征，直接引用就行，还不需要去添加`tr,td`之类的
 
-##### 响应式布局
+> 响应式布局
 
 ```
 /* 三列布局 */
@@ -117,7 +115,7 @@ i {
 }
 ```
 
-##### 动态高度的页脚贴在页面底部
+> 动态高度的页脚贴在页面底部
 
 当网站有个页脚的时候，一般的要求是内容超出屏幕的时候，页脚就跟在内容的后面，但内容不够一个屏幕的时候，页脚就得乖乖的呆在底部。一般这个实现要用到JS，用`table`就非常轻松
 
@@ -188,7 +186,7 @@ i {
 
 另外还有一种，主体`main`的`box-sizing: border-box`，设置`padding-bottom`即可
 
-##### 圣杯布局
+> 圣杯布局
 
 网页中常见的经典布局，有头部有底部，中间位置分为三列，其实实现就是把上面两个布局合并一下
 
@@ -229,9 +227,9 @@ i {
 ```
 > 需要注意的一点是：主体内容`main`必须设置为`table`，不能设置为`table-row`，如果把`main`变成一个`tr`，那么头部和底部的布局就会收到影响。
 
-### Grid布局
+## Grid布局
 
-#### 基本概念
+### 基本概念
 
 ```
 /* html  */
@@ -253,15 +251,15 @@ i {
 5. 网格单元格 (就是表格的一个格子)
 6. 网格区域 (相邻组团的格子)
 
-#### 网格容器的属性
+### 网格容器的属性
 
 > 用表格来解释它
 
-##### display
+*display*
 
 这个就不用多说，两种格式`display: grid | inline-grid;`
 
-##### grid-template-columns/grid-template-rows
+*grid-template-columns/grid-template-rows*
 
 `td`的宽度/高度，举例
 
@@ -290,7 +288,7 @@ grid-template-columns: repeat(4, 1fr);
 grid-template-columns: 1fr 1fr 1fr 1fr;
 ```
 
-##### grid-template-areas
+*grid-template-areas*
 
 这个属性用来定义网格区域，直接上代码
 
@@ -323,11 +321,11 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 
 这不，`圣杯布局`出来了
 
-##### grid-column-gap/grid-row-gap
+*grid-column-gap/grid-row-gap*
 
 定义列，行之间的间距，两个属性有一个合并属性`grid-gap`
 
-##### justify-items
+*justify-items*
 
 定义内容在`td`中的横向表现方式，就相当于`text-align`
 
@@ -336,7 +334,7 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 * end    ====== right
 * stretch 把td宽度填充满
 
-##### align-items
+*align-items*
 
 定义内容在`td`中的纵向表现方式，相当于`vertical-align`
 
@@ -345,11 +343,11 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 * end    ====== bottom
 * stretch 把td高度填充满
 
-##### place-items
+*place-items*
 
 `align-items` 和 `justify-items`的合并属性
 
-##### justify-content/align-content
+*justify-content/align-content*
 
 这个属性用来定义整体网格项相当于网格容器的横向/纵向位置，网格容器太大了，网格项用`px`之类的单位固定了宽高，所有的网格项加起来填不满网格容器
 
@@ -361,11 +359,11 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 * space-between  每一列/行之间放置一个均匀的空间，左右/上下两端没有空间
 * space-evenly  每一列/行之间放置一个均匀的空间，左右/上下两端放置一个均匀的空间
 
-##### place-content
+*place-content*
 
 `justify-content`和`align-content`合并属性
 
-##### grid-auto-columns / grid-auto-rows
+*grid-auto-columns / grid-auto-rows*
 
 定义新生成的网格轨道的大小，比如一个页面默认数据为9个3行3列，
 
@@ -380,7 +378,7 @@ ggrid-auto-columns: 1fr 1fr 1fr;
 grid-auto-rows: 150px 150px 150px;
 ```
 
-##### grid-auto-flow
+*grid-auto-flow*
 
 自动放置算法，当有一些没有明确指定位置的网格项，会自动放置这些网络，属性值：
 
@@ -400,11 +398,11 @@ grid-auto-rows: 150px 150px 150px;
 
 ![avatar](grid3.svg)
 
-#### 网格项属性
+### 网格项属性
 
 > `float`,`display:inline-block`,`display:table-cell`,`vertical-align`和`column-*`属性对网格项无效
 
-##### grid-column / grid-row
+*grid-column / grid-row*
 
 用来指定网格项的位置，如果值是单个值`m`,则表示该网格项在m行/列，如果值是`m/n`形式，表示从第m个网格线到第n个网格线，如果值是`m/span n`,表示从第m个网格线开始横跨n个列/行
 
@@ -419,19 +417,19 @@ grid-auto-rows: 150px 150px 150px;
 
 ![avatar](grid4.svg)
 
-##### grid-area
+*grid-area*
 
 给自己起个别名，上面已经出现过
 
-##### justify-self
+*justify-self*
 
 跟网格容器的`justify-items`一个意思
 
-##### align-self
+*align-self*
 
 跟网格容器的`align-items`一个意思
 
-##### place-self
+*place-self*
 
 `justify-self`和`align-self`的合并属性
 
