--- a/_posts/2019-03-01-SQL语句.md
+++ b/_posts/2019-03-01-SQL语句.md
@@ -105,9 +105,9 @@ CREATE TABLE table_name
 );
 ```
 ### Constraints 约束
-#### NOT NULL     
+*NOT NULL*          
 不能为空           
-#### UNIQUE     
+*UNIQUE*             
 唯一，数据不能存在重复，一个表中可以有多个UNIQUE约束     
 当给一个已创建的表添加该约束时
 ```
@@ -126,7 +126,7 @@ ADD CONSTRAINT uc_Name UNIQUE (column_name1,column_name2)
 ALTER TABLE table_name
 DROP column_name UNIQUE
 ```
-#### PRIMARY KEY
+*PRIMARY KEY*        
  主键,每个表仅且只能有一个PRIMARY KEY约束，但是可以通过下面的方式定义多列
  ```
  ALTER TABLE table_name
@@ -137,7 +137,7 @@ DROP column_name UNIQUE
  ALTER TABLE table_name
  DROP pk_Name PRIMARY KEY
  ```
-#### FOREIGN KEY
+*FOREIGN KEY*         
 外键,两个表相互关联的纽扣，比如`tableA`中的`P_ID`就是外键，用来关联`tableA`和`tableB`,而`P_ID`是`tableB`的主键
 ```
 CREATE TABLE  tableA
@@ -148,13 +148,13 @@ CREATE TABLE  tableA
     FOREIGN KEY(P_ID) REFRENCES tableB(P_ID)
 )
 ```
-#### CHECK
+*CHECK*         
 该约束用于限制列中的范围值
 ```
 ALTER TABLE table_name
 ADD CHECK(P_ID > 0)
 ```
-#### DEFAULT
+*DEFAULT*        
 可以设置列的默认值
 ```
 CREATE TABLE table_name
