--- a/_posts/2018-08-01-SASS.md
+++ b/_posts/2018-08-01-SASS.md
@@ -10,15 +10,12 @@ tags: CSS
 
 CSS呢，翻译过来就是层叠样式表，虽然前端开发离不开它，但它毕竟不是个编程语言，它没有逻辑没有变量，也没有条件语句，所以它写起来就很费事，为了解决这个问题，就有人向CSS中加入了编程元素，生成的东西就是`CSS预处理器`，今天的主角`SASS`，就是其中一个。
 
-## 正文
-
 ### 什么是SASS
 
 `SASS`就是一种CSS的开发工具。它方便，节省开发时间的，而且后期维护也简单。
 
-### 基本语法
 
-#### 变量
+## 变量
 
 变量以`$`开头
 
@@ -37,7 +34,7 @@ $side: left;
   border-#{$side}-radius: 5px;
 }
 ```
-#### 计算
+## 计算
 
 ```
 body {
@@ -47,7 +44,7 @@ body {
 }
 ```
 
-#### 嵌套
+## 嵌套
 
 ```
 /* 正常写法 */
@@ -84,9 +81,9 @@ a {
 }
 ```
 
-#### 代码的重用
+## 代码的重用
 
-##### 继承
+### 继承
 
 `SASS`允许一个选择器继承另外一个选择器，使用`@extend`命令
 
@@ -99,7 +96,7 @@ a {
   font-size: 12px;
 }
 ```
-##### Mixin
+### Mixin
 
 `Mixin`就是可以重用的代码块。使用`@mixin`定义一个代码块，用`@include`调用这个代码块。
 
@@ -123,7 +120,7 @@ div {
 }
 ```
 
-##### 颜色函数
+### 颜色函数
 
 `SASS`提供了一些内置函数
 
@@ -134,7 +131,7 @@ div {
 　　complement(#cc3) // #33c
 ```
 
-##### 插入文件
+### 插入文件
 
 用`@import`可引入外部文件
 
@@ -142,9 +139,9 @@ div {
 @import "path/filename.scss"
 ```
 
-#### 高级语法
+## 高级语法
 
-##### 条件语句
+### 条件语句
 
 `@if`可以用来判断
 
@@ -167,7 +164,7 @@ p {
 }
 ```
 
-##### 循环语句
+### 循环语句
 
 `@for`实现for循环
 
@@ -200,7 +197,7 @@ $i: 6;
 }
 ```
 
-##### 自定义函数
+### 自定义函数
 
 `@function`可以自己定义函数
 
@@ -214,7 +211,7 @@ $i: 6;
 ```
 
 
-### 转换
+## 转换
 
 > `SASS`文件后缀有两种，`.sass`和`.scss`，`.sass`文件对代码有严格要求，不能用`{}`和`;`，所以本人比较习惯`.scss`，毕竟和`css`差不多
 
@@ -252,7 +249,7 @@ gulp.task('default',function(){
 })
 ```
 
-### 在VUE中使用SASS
+## 在VUE中使用SASS
 
 首先需要安装`SASS`的依赖包
 
