--- a/_posts/2018-09-17-show.md
+++ b/_posts/2018-09-17-show.md
@@ -14,14 +14,14 @@ tags: CSS
 
 上面三种方式都可以让元素在页面上不可见，但是它们的区别是怎样：
 
-### display:none
+## display:none
 
 1. 不会在页面上渲染
 2. 不占据空间，毕竟页面上就没这玩意
 3. 不会被子类继承，因为爹不存在哪来的儿子
 4. `transition`对其无效
 
-### visibility:hidden
+## visibility:hidden
 
 1. 会被页面渲染，只是藏起来了
 2. 占据空间
@@ -29,7 +29,7 @@ tags: CSS
 4. 不会触发绑定的事件
 5. `transition`对其无效
 
-### opacity=0
+## opacity=0
 
 1. 真实存在
 2. 占据空间
