--- a/_posts/2019-08-18-JS模式.md
+++ b/_posts/2019-08-18-JS模式.md
@@ -213,5 +213,209 @@ tags: JS
 1. 解耦，发送者只需要把请求发给第一个接收者即可
 2. 职责链中增加一个接收者或者删除一个接收者都比较容易
 
+## 命令模式
+这个模式其实在开发中经常用到，比如我们给一个按钮添加了一个`click`事件，点我们触发这个`click`事件的时候，其实就是执行了命令。
+```
+    let btn = document.querySelector('#btn');
+    btn.addEventListener('click',function (e) {
+       console.log("按钮事件被触发");
+    },false);
+    btn.click();
+```
+依据上面的代码，我们就可以生成如下的命令模式
+```
+    // 创建命令内容1,2,3
+    let commmand1 = {
+        content: function() {
+            console.log('命令1');
+        }
+    };
+    let commmand2 = {
+        content: function() {
+            console.log('命令2');
+        }
+    };
+    let commmand3 = {
+        content:function() {
+            console.log('命令3');
+        }
+    };
+    // 宏命令，包含命令的添加方法和执行方法
+    let command = function () {
+        return {
+            commandList: [],
+            add(command) {
+                this.commandList.push(command);
+            },
+            excute() {
+                for(let item of this.commandList) {
+                    item.content();
+                }
+            }
+        }
+    };
+    // 发布命令的对象
+    let c = command();
+    // 添加命令
+    c.add(commmand1);
+    c.add(commmand2);
+    c.add(commmand3);
+    // 执行命令
+    c.excute();
+```
+> 优点
 
+一个指令可以执行多个命令
+## 策略模式
+《孙子兵法》讲的就是策略，根据不同的形势制定相应的运动方针，我们就用代码来实现孙子兵法
+```
+    function sunzi(situation) {
+        if (situation === 'A') {
+            console.log("A形势，执行三十六计之瞒天过海")
+        }
+        if (situation === 'B') {
+            console.log("B形势，执行三十六计之围魏救赵")
+        }
+        if (situation === 'C') {
+            console.log("C形势，执行三十六计之借刀杀人")
+        }
+        // ...剩余33计
+    }
+    sunzi('A');
+```
+这就是策略模式，但是代码中有大量的`if`判断，非常损耗性能，所以需要优化一下
+```
+    let optimizeSunzi = {
+        A() {
+            console.log("A形势，执行三十六计之瞒天过海");
+        },
+        B() {
+            console.log("B形势，执行三十六计之围魏救赵")
+        },
+        C() {
+            console.log("C形势，执行三十六计之借刀杀人")
+        }
+    };
+    let getHelp = function (situation) {
+        return optimizeSunzi[situation]();
+    };
+    getHelp('B');
+```
+> 优点
 
+代码更容易理解，也更容易扩展，同时代码也可以复用
+
+## 发布订阅模式
+京东上有一款鞋子处于缺货状态，小红和小绿都看中了它，但是她俩不知道到底什么时候才有货，不然得无时无刻的去京东上看，此时京东有一个功能`到货通知`，如果小红和小绿都启用了这个功能，一旦这个鞋子有货了就会发信息给她俩，这就是发布订阅模式。京东是`发布者`，小红和小绿是`订阅者`。
+```
+    let publish = (function () {
+        // 订阅者容器
+        let subArr = [];
+        return {
+            add(fn) {
+                subArr.push(fn);
+            },
+            trigger() {
+                for (let item of subArr) {
+                    item.apply(this, arguments);
+                }
+            }
+        }
+    })();
+    // 添加两个订阅者
+    publish.add(function (color,size) {
+        console.log("订阅者1:颜色（"+color+")尺码("+size+")");
+    });
+    publish.add(function (color,size) {
+        console.log("订阅者2:颜色（"+color+")尺码("+size+")");
+    });
+    // 发布消息
+    publish.trigger("红色",42);
+```
+> 优点
+
+1. 支持简单的广播通信，一旦对象状态改变，就会自动通知订阅的对象
+2. 发布者和订阅者耦合性降低
+
+> 缺点
+
+创建订阅者需要消耗时间和内存，切勿大量使用。
+
+## 中介者模式
+中介，即连接两方的一个环节。比如：裁判                  
+用跑男举例，比赛两方红和蓝，比赛开始前分队伍，确认队友与敌人，比赛开始后红蓝双方开始撕名牌，名牌被撕掉裁判就通知"xx被淘汰"，如果某一方的所有队员的名牌都被撕掉，裁判宣判比赛结束。
+```
+    function Referee(name, team) {
+        this.name = name;     // 姓名
+        this.team = team;     // 队伍
+        this.state = 'live';  // 当前状态
+        this.friends = [];    // 队友
+        this.enemies = [];    // 敌人
+    }
+
+    Referee.prototype.lose = function (allDead) {
+        // 如果一方全体淘汰，则该队伍失败
+        if (allDead) {
+            console.log(this.team + "团队失败！");
+            console.log(this.enemies[0].team + "团队胜出！");
+        } else {
+            console.log(this.team + "方" + this.name + "淘汰！");
+        }
+    };
+    Referee.prototype.die = function () {
+        this.state = 'die';
+        let all_dead = true;
+        for (let item of this.friends) {
+            if (item.state === 'live') {
+                all_dead = false;
+                break;
+            }
+        }
+        this.lose();
+        if (all_dead) {
+            this.lose(true);
+        }
+    };
+    let signUp = (function () {
+        // 队员列表
+        let playerList = [];
+        return function (name, team) {
+            let newPlayer = new Referee(name, team);
+            playerList.push(newPlayer);
+            // 设置每个队员的队友与敌人
+            for (let item of playerList) {
+                if (item !== newPlayer) {
+                    if (item.team === newPlayer.team) {
+                        newPlayer.friends.push(item);
+                        item.friends.push(newPlayer);
+                    } else {
+                        newPlayer.enemies.push(item);
+                        item.enemies.push(newPlayer);
+                    }
+                }
+            }
+            return newPlayer;
+        }
+    })();
+    // 队员注册
+    let p1 = signUp('aa', "red");
+    let p2 = signUp('bb', "red");
+    let p3 = signUp('cc', "red");
+    let p4 = signUp('dd', "red");
+    let p5 = signUp('ee', "blue");
+    let p6 = signUp('ee', "blue");
+    let p7 = signUp('ee', "blue");
+    let p8 = signUp('ee', "blue");
+    // 淘汰
+    p1.die();
+    p2.die();
+    p3.die();
+    p4.die();
+```
+
+> 优点
+
+依旧是代码更容易理解，耦合性低
+
+## 结束
+其实JS模式在日常代码中经常性用到，或许只是你没有细心注意。
