修改链接地址

--- a/_posts/2019-04-01-前端路由.md
+++ b/_posts/2019-04-01-前端路由.md
@@ -101,7 +101,7 @@ URL地址变更 | 会改变 | 可以改变，也可以不改变 |
      
 ## 应用
 
-我封装了一个插件，可实现简单的前端路由，支持hash和history模式，代码在(这里)[https://dev.tencent.com/u/yingmhd/p/ymplugins/git/tree/master/%E5%89%8D%E7%AB%AF%E8%B7%AF%E7%94%B1]，使用如下：
+我封装了一个插件，可实现简单的前端路由，支持hash和history模式，代码在[这里](https://github.com/yingmhd/ymplugins/tree/master/%E5%89%8D%E7%AB%AF%E8%B7%AF%E7%94%B1)，使用如下：
 
 
               
