添加博客链接

--- a/_posts/2018-10-10-table布局.md
+++ b/_posts/2018-10-10-table布局.md
@@ -7,8 +7,8 @@ tags: 布局
 ---
 
 ## 前言
-flex布局看[这里]()            
-grid布局看[这里]()           
+flex布局看[这里](https://blog.ymhd.xyz/posts/2018/10/11/flex%E5%B8%83%E5%B1%80.html)            
+grid布局看[这里](https://blog.ymhd.xyz/posts/2018/10/12/grid%E5%B8%83%E5%B1%80.html)           
 ## table布局
 > 基本语法
 
