--- a/_posts/2018-10-11-flex布局.md
+++ b/_posts/2018-10-11-flex布局.md
@@ -7,8 +7,8 @@ tags: 布局
 ---
 
 ## 前言
-table布局看[这里]()            
-grid布局看[这里]()           
+table布局看[这里](https://blog.ymhd.xyz/posts/2018/10/10/table%E5%B8%83%E5%B1%80.html)            
+grid布局看[这里](https://blog.ymhd.xyz/posts/2018/10/12/grid%E5%B8%83%E5%B1%80.html)           
 ## flex布局
 flex布局的属性比较少，所以就不用图示了，直接看概念。
 > Flex容器
