--- a/_posts/2018-10-12-grid布局.md
+++ b/_posts/2018-10-12-grid布局.md
@@ -12,7 +12,16 @@ flex布局看[这里](https://blog.ymhd.xyz/posts/2018/10/11/flex%E5%B8%83%E5%B1
 
 ## Grid布局
 
-### 基本概念
+> 优点
+
+二维布局，可以同时设定x轴与y轴
+
+> 缺点
+
+兼容性差一点，还有就是，难
+
+
+> 基本语法
 
 ```
 /* html  */
@@ -27,6 +36,9 @@ flex布局看[这里](https://blog.ymhd.xyz/posts/2018/10/11/flex%E5%B8%83%E5%B1
 }
 ```
 
+> 基本概念
+
+先了解一下基本名词：
 1. 网格容器 (container)
 2. 网格项 (item)
 3. 网格线 (Grid布局可以想象成一个表格，构成表格的线就是网格线)
@@ -34,15 +46,13 @@ flex布局看[这里](https://blog.ymhd.xyz/posts/2018/10/11/flex%E5%B8%83%E5%B1
 5. 网格单元格 (就是表格的一个格子)
 6. 网格区域 (相邻组团的格子)
 
-### 网格容器的属性
+> 网格容器的属性(用表格来阐释)
 
-> 用表格来解释它
-
-*display*
+### display
 
 这个就不用多说，两种格式`display: grid | inline-grid;`
 
-*grid-template-columns/grid-template-rows*
+### grid-template-columns/grid-template-rows
 
 `td`的宽度/高度，举例
 
@@ -63,7 +73,7 @@ grid-template-columns: 1fr 50px 1fr 1fr;
 ```
 这个例子中，就是总宽度减去50px，然后剩余空间平分
 
-> 当属性重复的时候可以用`repeat()`
+**当属性重复的时候可以用`repeat()`**
 
 ```
 grid-template-columns: repeat(4, 1fr);
@@ -71,7 +81,7 @@ grid-template-columns: repeat(4, 1fr);
 grid-template-columns: 1fr 1fr 1fr 1fr;
 ```
 
-*grid-template-areas*
+### grid-template-areas
 
 这个属性用来定义网格区域，直接上代码
 
@@ -100,7 +110,7 @@ grid-template-columns: 1fr 1fr 1fr 1fr;
 
 上面的代码定义了一个3行4列的表格，然后给`item-a/b/c/d`起了个名字，这些个名字就能当做占位符去占位置，`header、footer`就整整占了一行
 
-> . 代表空区域，位置是空的
+**. 代表空区域，位置是空的**
 
 这不，`圣杯布局`出来了
 
